--- a/packages/landing-gatsby/package.json
+++ b/packages/landing-gatsby/package.json
@@ -5,7 +5,9 @@
   "version": "6.0.0",
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
+    "@paypal/react-paypal-js": "^3.0.3",
     "@redq/reuse-modal": "^1.1.9",
+    "@styled-system/theme-get": "^5.1.2",
     "gatsby": "^2.23.10",
     "gatsby-image": "^2.4.8",
     "gatsby-plugin-manifest": "^2.4.13",
@@ -37,15 +39,14 @@
     "react-rnd": "^10.1.10",
     "react-scroll-parallax": "^2.3.3",
     "react-scrollspy": "^3.4.2",
+    "react-st-modal": "^1.1.3",
     "react-stickynode": "2.1.1",
     "styled-components": "^5.1.1",
-    "styled-system": "5.1.5",
-    "@styled-system/theme-get": "^5.1.2",
-    "@paypal/react-paypal-js": "^3.0.3"
+    "styled-system": "5.1.5"
   },
   "scripts": {
     "build": "gatsby build",
-    "dev": "gatsby develop",
+    "dev": "set GATSBY_ENV=development && gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "now-build": "yarn run build"
