--- a/packages/landing-gatsby/package.json
+++ b/packages/landing-gatsby/package.json
@@ -45,7 +45,7 @@
     "styled-system": "5.1.5"
   },
   "scripts": {
-    "build": "gatsby build",
+    "build": "set GATSBY_ENV=production && gatsby build",
     "dev": "set GATSBY_ENV=development && gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
